--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
@@ -77,7 +79,11 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "isomorphic-dompurify": "^2.9.0",
+    "react-error-boundary": "^4.0.11"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.3.1",
@@ -85,6 +91,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "cross-env": "^7.0.3",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
@@ -102,7 +109,11 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^5.4.20"
+    "vite": "^5.4.20",
+  "vitest": "^1.0.0",
+  "supertest": "^6.3.3",
+    "@types/supertest": "^6.0.2",
+    "@types/dompurify": "^3.0.5"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
