--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
+    "typescript-eslint": "^8.46.0",
     "vite": "^5.4.20",
     "vitest": "^1.0.0"
   },
