--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/dompurify": "^3.0.5",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
@@ -111,7 +112,8 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.31.4",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
@@ -125,8 +127,8 @@
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
     "typescript-eslint": "^8.46.0",
-    "vite": "^5.4.20",
-    "vitest": "^1.0.0"
+    "vite": "^7.1.9",
+    "vitest": "^3.2.4"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
