--- a/.env.example
+++ b/.env.example
@@ -89,3 +89,11 @@ CSP_ENABLED=true
 # ============================================
 # Set to 'true' to use Ethereal email (fake SMTP for testing)
 USE_TEST_EMAIL=false
+
+# Email (e.g., for Gmail: create an app password)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+EMAIL_FROM=LexiSense Invites <no-reply@lexisense.com>
+APP_URL=http://localhost:3000  # Change to production URL later
