--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/index.js",
+    "dev": "concurrently \"cross-env NODE_ENV=development tsx server/index.ts\" \"vite\"",
+    "dev:server": "cross-env NODE_ENV=development tsx server/index.ts",
+    "dev:client": "vite",
+    "build": "vite build && esbuild ./server/index.ts --platform=node --packages=external --external:@shared --bundle --format=esm --outfile=./dist/index.js",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "typecheck": "tsc --noEmit",
@@ -120,6 +122,7 @@
     "@typescript-eslint/parser": "^7.17.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^9.2.1",
     "drizzle-kit": "^0.31.8",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
