--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.11",
-    "@types/node": "20.14.12",
+    "@types/node": "^20.19.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/pdf-parse": "^1.1.4",
