--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx watch server/index.ts",
     "build": "vite build --outDir dist/client && tsc -p tsconfig.server.json",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "tsc -p tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/server/index.js",
     "check": "tsc --noEmit",
     "test": "vitest",
@@ -15,11 +17,14 @@
     "db:migrate": "tsx server/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate:pg",
-    "cleanup:invitations": "tsx server/jobs/cleanup.ts"
+    "cleanup:invitations": "tsx server/jobs/cleanup.ts",
+    "check-env": "tsx scripts/check-env.ts",
+    "deploy:vercel": "npm run build:client && vercel --prod",
+    "deploy:check": "npm run check-env && npm run build && npm test"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.525.0",
-    "@aws-sdk/s3-request-presigner": "^3.525.0",
+    "@aws-sdk/client-s3": "^3.983.0",
+    "@aws-sdk/s3-request-presigner": "^3.983.0",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -47,8 +52,8 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.411.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8",
+    "multer": "^2.0.0-rc.4",
+    "nodemailer": "^6.9.15",
     "openai": "^4.52.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -64,7 +69,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vite-express": "^0.17.0",
-    "winston": "^3.11.0",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "wouter": "^3.3.1",
     "zod": "^3.23.8"
   },
@@ -83,6 +89,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "@vitejs/plugin-react": "^4.3.1",
