--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build:server": "tsc -p tsconfig.server.json",
     "start": "cross-env NODE_ENV=production tsx server/index.ts",
     "check": "tsc --noEmit",
-    "test": "vitest",
-    "lint": "eslint . --ext .ts,.tsx",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "lint": "eslint .",
     "format": "prettier --write .",
+    "typecheck": "tsc --noEmit",
     "db:push": "drizzle-kit push:pg",
     "db:migrate": "tsx server/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
@@ -20,7 +22,7 @@
     "cleanup:invitations": "tsx server/jobs/cleanup.ts",
     "check-env": "tsx scripts/check-env.ts",
     "deploy:vercel": "npm run build:client && vercel --prod",
-    "deploy:check": "npm run check-env && npm run build && npm test"
+    "deploy:check": "npm run check-env && npm run build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.983.0",
@@ -107,6 +109,7 @@
     "tailwindcss": "^3.4.5",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.54.0",
     "vite": "^5.3.4",
     "vitest": "^2.0.3"
   }
